refine all videos, added ?rel=0 to the links to surpress other video suggestions at the end.

--- a/templates/iccap/SPar_Modeling/Spar12.html
+++ b/templates/iccap/SPar_Modeling/Spar12.html
@@ -23,7 +23,7 @@ What makes Sxx-Parameters especially interesting for modeling, is that  S11 and 
 
 <br/>
 Demo Movie: See AN-95-1A.mp4<br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WU2JMAot5Do" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WU2JMAot5Do?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
 
 
