--- a/templates/iccap/SPar_Modeling/Spar15.html
+++ b/templates/iccap/SPar_Modeling/Spar15.html
@@ -16,7 +16,7 @@ The demo ICCAP .mdl file used in the example can be downloaded here:
     <li><a href="/iccap/spar/basic/download" target="_blank">S-Parameters_Basic_Examples_Tutorial.mdl</a> </li>
 </ul>
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/zKHIX7LmE2I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zKHIX7LmE2I?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br/><br/>
 
