--- a/templates/video/ICCAP_bjt_modeling.html
+++ b/templates/video/ICCAP_bjt_modeling.html
@@ -11,7 +11,7 @@
 <br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UEqf0vDhlcw" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UEqf0vDhlcw?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 <br/><br/>
