--- a/templates/video/ICCAP_check_spar.html
+++ b/templates/video/ICCAP_check_spar.html
@@ -24,7 +24,7 @@ Topics covered:
 <br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/f1T2-AY39C4" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f1T2-AY39C4?rel=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/><br/><br/><br/>
 <br/><br/>
