--- a/templates/video/MBP_RMS_algor.html
+++ b/templates/video/MBP_RMS_algor.html
@@ -9,7 +9,7 @@ Well, there are a bunch of RMS algorithms we can use, please go to the RMS optio
 here various rms equations are listed, please pay attention to the Resolution and cutoff value for different targets.
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rDNUot-a41M" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rDNUot-a41M?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/>
 Resolution is like a filter, any point’s measurement value smaller than the resolution will be excluded from the calculate,
