--- a/templates/video/MBP_ReCentering.html
+++ b/templates/video/MBP_ReCentering.html
@@ -11,7 +11,7 @@ Let’s start with a new project, here I am using a BSIM4 model as an example; h
 <br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vNcfw5dEprk" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vNcfw5dEprk?rel=0" frameborder="0"
         allow="autoplay; encrypted-media" allowfullscreen></iframe><br/><br/>
 
 First, I am going to load an input file which defines the new specs. MBP 2017 supports 2 spec formats, one is .mea, another is csv file. The data file contains device information which we call Targets, such as Vtlin, Vtsat, Idlin and Idsat, etc.
