--- a/templates/video/MBP_dIdsat_SA.html
+++ b/templates/video/MBP_dIdsat_SA.html
@@ -15,7 +15,7 @@ This video also, in an animated way, explains how <font style="color:blue">trans
 <br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6qVdqQQC4Fg" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6qVdqQQC4Fg?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
