--- a/templates/video/MBP_pseudo_data.html
+++ b/templates/video/MBP_pseudo_data.html
@@ -17,7 +17,7 @@ Why pseudo data? <br/><br/>
 </ol>
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/z3WVpN1rDbY" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/z3WVpN1rDbY?rel=0" frameborder="0"
         allowfullscreen></iframe>
 
 <br/><br/><br/><br/>
