--- a/templates/video/MBP_set_gminDC.html
+++ b/templates/video/MBP_set_gminDC.html
@@ -10,7 +10,7 @@ Let’s see how to set GminDC and GeoShrink as simulation options.<br/><br/>
 Please go to MBP menu Extraction -> Options -> Spice Options.  These options are listed here.<br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G2_WS8oP3nw" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G2_WS8oP3nw?rel=0" frameborder="0" allowfullscreen></iframe>
 
 <br/><br/>
 
