--- a/templates/video/MBP_sigNum_symbolSize.html
+++ b/templates/video/MBP_sigNum_symbolSize.html
@@ -10,7 +10,7 @@ Please go to GUI options, plot details, where we can increase the display precis
 BTW, we can change the symbol size too, this may make our plot look prettier. :D
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0t64OAcsdy8" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0t64OAcsdy8?rel=0" frameborder="0" allowfullscreen></iframe>
 
 <br/><br/><br/><br/>
 
