--- a/templates/video/MBP_sram.html
+++ b/templates/video/MBP_sram.html
@@ -19,7 +19,7 @@ Followed by another 5 minutes in-depth live demo that illustrates how easy MBP 2
 you time.
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t5G1FDy1rgA" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t5G1FDy1rgA?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/>
 
