--- a/templates/video/MBP_tabs_sfloat.html
+++ b/templates/video/MBP_tabs_sfloat.html
@@ -13,7 +13,7 @@ Almost all panel are floatable, such as Plot Browser, Device Navigator, Paramete
 To put a panel back if simple, too, just click the cross , it then goes back to the original place <br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/oGh8U99EJec" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oGh8U99EJec?rel=0" frameborder="0"
         allowfullscreen></iframe>
 
 
