--- a/templates/video/MBP_use_diff_res.html
+++ b/templates/video/MBP_use_diff_res.html
@@ -12,7 +12,7 @@ DUTs, yet essentially the DUTs use the same MOSFET model for simulation.
 <br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_KJmfNDL7Z0" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_KJmfNDL7Z0?rel=0" frameborder="0" allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
 {% endblock %}
