--- a/templates/video/MQA_HvsS.html
+++ b/templates/video/MQA_HvsS.html
@@ -14,7 +14,7 @@
     <br/><br/>
     In particular, this demo shows an HSPICE vs SPECTRE simulation.
     <br/><br/>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3CjVsyXmxmQ" frameborder="0"
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3CjVsyXmxmQ?rel=0" frameborder="0"
             allowfullscreen></iframe>
 
 
