--- a/templates/video/MQA_NP_MC.html
+++ b/templates/video/MQA_NP_MC.html
@@ -14,7 +14,7 @@ The demo rule package and example model can be <a href="/video/mqa_np_mc/downloa
 
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/GFasYh0sSVM" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/GFasYh0sSVM?rel=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
