--- a/templates/video/MQA_NearVth.html
+++ b/templates/video/MQA_NearVth.html
@@ -16,7 +16,7 @@ This demo introduces the NearVth Calculation function in MQA, There are 4 functi
 
 
 <br/><br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mFGOSwsZGuY" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mFGOSwsZGuY?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/>
 There are a few options to use to adjust the flavor, as follows:<br/><br/>
