--- a/templates/video/MQA_SimVerComp.html
+++ b/templates/video/MQA_SimVerComp.html
@@ -16,7 +16,7 @@ it’s not likely we would twist one’s arm to use certain version.
 In particular, this demo uses ADS 2014 and ADS 2015.
 
 <br/><br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/AiqcNDkRlFI" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AiqcNDkRlFI?rel=0" frameborder="0"
         allowfullscreen></iframe>
 
 
