--- a/templates/iccap/NWA_Cal/nwaCal2.html
+++ b/templates/iccap/NWA_Cal/nwaCal2.html
@@ -26,7 +26,7 @@ The demo data files can be downloaded <a href="/iccap/nwacal3/download" target="
     <li>THRU.mdm</li>
 </ul>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xOGDRdsVGjs" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xOGDRdsVGjs?rel=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br/><br/>
