--- a/templates/video/ICCAP_cap_res.html
+++ b/templates/video/ICCAP_cap_res.html
@@ -15,7 +15,7 @@ This video explains and demonstrates a method to develop accurate Spice models f
 
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fwD_82dzsx8" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fwD_82dzsx8?rel=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br/><br/><br/><br/>
