--- a/templates/video/ICCAP_ind.html
+++ b/templates/video/ICCAP_ind.html
@@ -13,7 +13,7 @@ Based on the other video of this fundamental device modeling series, (How to Mod
 <br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VY1xJORo1T0" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VY1xJORo1T0?rel=0" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <br/><br/><br/><br/>
