--- a/templates/video/ICCAP_open_gui.html
+++ b/templates/video/ICCAP_open_gui.html
@@ -23,7 +23,7 @@ The key advantages are:
 
 <br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xCkJTDyQl2U" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xCkJTDyQl2U?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 <br/><br/>
