--- a/templates/video/MBP_IV_diff_T.html
+++ b/templates/video/MBP_IV_diff_T.html
@@ -11,7 +11,7 @@ We know MBP has plenty of built-in T-dependent plots for IMV targets, such as Vt
 Now the question is , how to view a I_V_T plot, such as Ids_Vgs @ different Temperature?
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Ezvch0Cj7K0" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ezvch0Cj7K0?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
