--- a/templates/video/MBP_Ion_Ioff_correlation.html
+++ b/templates/video/MBP_Ion_Ioff_correlation.html
@@ -12,7 +12,7 @@ The techniques used here can be applied to create many other correlation plots, 
 
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fgfTcGPeCGM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fgfTcGPeCGM?rel=0" frameborder="0" allowfullscreen></iframe>
 
 
 <br/><br/><br/><br/>
