--- a/templates/video/MBP_bigger_RMS.html
+++ b/templates/video/MBP_bigger_RMS.html
@@ -11,7 +11,7 @@ plot which may be hidden from current view.
 A good habit we recommend to everyone, is, before every manual optimization, please use the Clear all regions button to clear all possible existing selection.
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/aVDudDlbazY" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aVDudDlbazY?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
