--- a/templates/video/MBP_check_netlist.html
+++ b/templates/video/MBP_check_netlist.html
@@ -11,7 +11,7 @@ Say we have model and data loaded, and by default MBP uses its internal simulato
 To turn on saving netlist file, please follow the steps in this demo:<br/><br/>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0nZcJDFqgd0" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0nZcJDFqgd0?rel=0" frameborder="0"
         allowfullscreen></iframe>
 
 <br/><br/>
