--- a/templates/video/MBP_comp_models.html
+++ b/templates/video/MBP_comp_models.html
@@ -7,7 +7,7 @@
 <hr>
 Is it possible to compare models simulation in MBP? The answer is YES!  <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/H4RwSBdtVSw" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H4RwSBdtVSw?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/>
 To be note, if you want to mix compare a hspice and a Spectre model, please turn to Keysight Model Qualification tool, MQA.
