--- a/templates/video/MBP_export_pdf.html
+++ b/templates/video/MBP_export_pdf.html
@@ -10,7 +10,7 @@ It would be handy if we could dump the plots into a PDF file, and Yes, MBP has t
 As an example, we will show how to export the current view into a PDF file, which has different IV and IMV plots.
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/peDe-dhjFXQ" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/peDe-dhjFXQ?rel=0" frameborder="0"
         allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
