--- a/templates/video/MBP_multiDie_data.html
+++ b/templates/video/MBP_multiDie_data.html
@@ -8,7 +8,7 @@
 On a plot where we have silicon data from the same device but different dies.
 <br/><br/>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ci38-GVw4QM" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ci38-GVw4QM?rel=0" frameborder="0" allowfullscreen></iframe>
 <br/><br/><br/><br/>
 
 {% endblock %}
