--- a/templates/video/MQA_ASM-HEMT.html
+++ b/templates/video/MQA_ASM-HEMT.html
@@ -22,7 +22,7 @@
 
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MZefh26VMfg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MZefh26VMfg?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     <br/><br/><br/><br/>
