--- a/templates/video/MQA_check_netlist.html
+++ b/templates/video/MQA_check_netlist.html
@@ -11,7 +11,7 @@ In this demo we will see how and where we can save netlist files auto created by
 Most errors associated with simulation can be fixed by looking at the netlist files and simulator’s output files,
 they will give us clues for further debugging.
 <br/><br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xQXM68NOVtg" frameborder="0"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xQXM68NOVtg?rel=0" frameborder="0"
         allowfullscreen></iframe>
 
 
