add ICCAP app note Spice interpretation of S-par - first 3 chapters

--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -75,29 +75,58 @@ IC-CAP App Notes
         </ul>
         <br/>
 
+        <h4>Spice Interpretation of S-Parameters</h4>
+
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spice-spar/1" target="_blank">1. Interpreting S-Par by SPICE Schematics</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spice-spar/2" target="_blank">2. Converting S-Par to PI or Tee Schematics</a>
+                    </td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spice-spar/3" target="_blank">3. Developing SPICE Model from Impedance Plots</a>
+                    </td>
+                </tr>
+
+            </table>
+        </ul>
+        <br/>
+
+
         <h4>Video Tutorials</h4>
         <ul>
             <table>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/ICCAP_OPEN_GUI" target="_blank">1. Simplify Device Model Extraction using an Open Source User
+                        <a href="/video/ICCAP_OPEN_GUI" target="_blank">1. Simplify Device Model Extraction using an
+                            Open Source User
                             Interface</a></td>
                 </tr>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/iccap_bjt_modeling" target="_blank">2. Model a Bipolar Junction Transistor</a></td>
+                        <a href="/video/iccap_bjt_modeling" target="_blank">2. Model a Bipolar Junction Transistor</a>
+                    </td>
                 </tr>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/iccap_cap_res" target="_blank">3. Model RF Passive Devices: Capacitors and Resistor</a></td>
+                        <a href="/video/iccap_cap_res" target="_blank">3. Model RF Passive Devices: Capacitors and
+                            Resistor</a></td>
                 </tr>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/iccap_ind" target="_blank">4. Model RF Passive Devices: Spiral Inductors</a></td>
+                        <a href="/video/iccap_ind" target="_blank">4. Model RF Passive Devices: Spiral Inductors</a>
+                    </td>
                 </tr>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
-                        <a href="/video/iccap_check_spar" target="_blank">5. Accurate Transistor S-Parameter Measurement and Validation</a></td>
+                        <a href="/video/iccap_check_spar" target="_blank">5. Accurate Transistor S-Parameter Measurement
+                            and Validation</a></td>
                 </tr>
 
             </table>
