--- a/templates/iccap/toc.html
+++ b/templates/iccap/toc.html
@@ -18,5 +18,10 @@
     <h5><a href="/iccap-nwa-cal/2">6. Video - NWA Cal Example</a></h5>
     <hr/>
 
+    <h4>Spice Interpretation of S-Par</h4>
+    <h5><a href="/iccap-spice-spar/1">1. Interpreting S-Par by SPICE Schematics</a></h5>
+    <h5><a href="/iccap-spice-spar/2">2. Converting S-Par to PI or Tee Schematics</a></h5>
+    <h5><a href="/iccap-spice-spar/3">3. Model from Impedance Plots</a></h5>
+
     <br/><br/><br/><br/><br/>
 </div>
