--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,12 +1,35 @@
 <table width="100%">
     <tr>
-        <td width="15%">2020.01.09</td>
-         <td>ICCAP Note Update: <a href="/iccap-spar/1.2" target="_blank">Video Demo: Transition of the Impedance Plane into the Smith Chart</a>
+        <td width="15%">2020.02.01</td>
+        <td>ICCAP Noate: <a href="/iccap-spice-spar/1" target="_blank">Interpreting S-Par By SPICEs Schematics</a>
         </td>
     </tr>
-     <tr>
+    <tr>
+        <td width="15%">2020.02.01</td>
+        <td>ICCAP Noate: <a href="/iccap-spice-spar/2" target="_blank">Converting S-Par to PI or Tee Schematics</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.02.01</td>
+        <td>ICCAP Noate: <a href="/iccap-spice-spar/3" target="_blank">Developing SPICE Model from Impedance Plots</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2020.01.16</td>
+        <td>MBP Note Update: <a href="/mbpfaq/mbsetpath" target="_blank">Change default .mb_set directory on Linux</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2020.01.09</td>
-         <td>ICCAP Note Update: <a href="/iccap-spar/1.1" target="_blank">Two PDF app notes: S-Par Techniques for Faster, More Accurate Network Design</a>
+        <td>ICCAP Note Update: <a href="/iccap-spar/1.2" target="_blank">Video Demo: Transition of the Impedance Plane
+            into the Smith Chart</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.01.09</td>
+        <td>ICCAP Note Update: <a href="/iccap-spar/1.1" target="_blank">Two PDF app notes: S-Par Techniques for Faster,
+            More Accurate Network Design</a>
         </td>
     </tr>
     <tr>
@@ -19,7 +42,7 @@
         <td>ICCAP Note: <a href="/iccap-nwa-cal/5" target="_blank">Get CalKit Data from Measurements</a>
         </td>
     </tr>
-     <tr>
+    <tr>
         <td width="15%">2020.01.08</td>
         <td>ICCAP Note: <a href="/iccap-nwa-cal/0" target="_blank">Identify the Maximum Applicable RF Power</a>
         </td>
@@ -54,7 +77,7 @@
         <td>ICCAP Note: <a href="/iccap-spar/1.3" target="_blank">Device Modeling Based on S-Parameters</a>
         </td>
     </tr>
-     <tr>
+    <tr>
         <td width="15%">2020.01.07</td>
         <td>ICCAP Note: <a href="/iccap-spar/1.2" target="_blank">Interpreting S-Parameters</a>
         </td>
