added ICCAP blog: netlist parser, and how to install ICCAP smartly on Windows.

--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -11,36 +11,6 @@ IC-CAP App Notes
     <hr>
     <div overflow="scroll">
 
-
-        <h4>S-Parameters for Modeling Engineers</h4>
-
-        <ul>
-            <table>
-                <tr style="border-bottom: 1px solid gainsboro">
-                    <td style="width:750px">
-                        <a href="/iccap-spar/1.1" target="_blank">1. From Classical TwoPort to S-Parameters</a></td>
-                </tr>
-                <tr style="border-bottom: 1px solid gainsboro">
-                    <td style="width:750px">
-                        <a href="/iccap-spar/1.2" target="_blank">2. Interpreting S-Parameters</a></td>
-                </tr>
-                <tr style="border-bottom: 1px solid gainsboro">
-                    <td style="width:750px">
-                        <a href="/iccap-spar/1.3" target="_blank">3. Device Modeling Based on S-Parameters</a></td>
-                </tr>
-                <tr style="border-bottom: 1px solid gainsboro">
-                    <td style="width:750px">
-                        <a href="/iccap-spar/1.4" target="_blank">4. How to Simulate S-Parameters</a></td>
-                </tr>
-                <tr style="border-bottom: 1px solid gainsboro">
-                    <td style="width:750px">
-                        <a href="/iccap-spar/1.5" target="_blank">5. Video - S-Parameters Modeling in Action</a></td>
-                </tr>
-
-            </table>
-        </ul>
-        <br/>
-
         <h4>Network Analyzer(NWA) Calibration</h4>
 
         <ul>
@@ -74,6 +44,48 @@ IC-CAP App Notes
             </table>
         </ul>
         <br/>
+        <h4>S-Parameters De-embedding</h4>
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="" target="">Coming Soon...</a></td>
+                </tr>
+
+
+            </table>
+        </ul>
+        <br/>
+
+        <h4>S-Parameters for Modeling Engineers</h4>
+
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.1" target="_blank">1. From Classical TwoPort to S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.2" target="_blank">2. Interpreting S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.3" target="_blank">3. Device Modeling Based on S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.4" target="_blank">4. How to Simulate S-Parameters</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spar/1.5" target="_blank">5. Video - S-Parameters Modeling in Action</a></td>
+                </tr>
+
+            </table>
+        </ul>
+        <br/>
+
 
         <h4>Spice Interpretation of S-Parameters</h4>
 
@@ -93,11 +105,60 @@ IC-CAP App Notes
                         <a href="/iccap-spice-spar/3" target="_blank">3. Developing SPICE Model from Impedance Plots</a>
                     </td>
                 </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spice-spar/4" target="_blank">4. Handling Unphysical PI or Tee Impedances</a>
+                    </td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-spice-spar/5" target="_blank">5. YouTube Videos Related to This Topic</a>
+                    </td>
+                </tr>
 
             </table>
         </ul>
         <br/>
 
+        <h4>Link to a Model Library</h4>
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="" target="">Coming Soon...</a></td>
+                </tr>
+
+
+            </table>
+        </ul>
+        <br/>
+        <!--<ul>-->
+            <!--<table>-->
+                <!--<tr style="border-bottom: 1px solid gainsboro">-->
+                    <!--<td style="width:750px">-->
+                        <!--<a href="/iccap-link-lib/1" target="_blank">1. With Sub-circuits within a "library" Section</a>-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--<tr style="border-bottom: 1px solid gainsboro">-->
+                    <!--<td style="width:750px">-->
+                        <!--<a href="/iccap-link-lib/2" target="_blank">2. With Sub-circuits Only</a>-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--<tr style="border-bottom: 1px solid gainsboro">-->
+                    <!--<td style="width:750px">-->
+                        <!--<a href="/iccap-link-lib/3" target="_blank">3. With Sub-circuits That Have "parameters"-->
+                            <!--Lines</a>-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--<tr style="border-bottom: 1px solid gainsboro">-->
+                    <!--<td style="width:750px">-->
+                        <!--<a href="/iccap-link-lib/4" target="_blank">4. With Model Cards Only</a>-->
+                    <!--</td>-->
+                <!--</tr>-->
+
+            <!--</table>-->
+        <!--</ul>-->
+        <br/>
 
         <h4>Video Tutorials</h4>
         <ul>
@@ -221,6 +282,12 @@ IC-CAP App Notes
             <table>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:250px">
+                        <a href="/iccapfaq/install_smartly" target="_blank">0. Install IC-CAP Smartly on Windows</a>
+                    </td>
+                    <td style="width:500px">Best Practice for IC-CAP Installation and Configuration</td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:250px">
                         <a href="/iccap/misc/param_sync" target="_blank">*1. Parameters Sync-up</a></td>
                     <td style="width:500px">Keep two or more model parameters sync-up during optimization</td>
 
@@ -276,6 +343,12 @@ IC-CAP App Notes
                         <a href="/iccapfaq/lax_vm" target="_blank">11. Installer Java Version</a></td>
                     <td style="width:500px">Specify a different Java version for Installation</td>
                 </tr>
+                 <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:250px">
+                        <a href="/iccapfaq/netlist_parser" target="_blank">12. Controlling the IC-CAP Netlist Parser</a></td>
+                     <td style="width:500px">Examples of using <em>#echo,  $mpar(), $dpar(), $var(), include</em></td>
+                </tr>
+
             </table>
 
         </ul>
