--- a/templates/iccap/toc.html
+++ b/templates/iccap/toc.html
@@ -1,14 +1,6 @@
 <br/>
 
 <div>
-    <h4>S-Par Modeling</h4>
-    <h5><a href="/iccap-spar/1.1">1. From Classical 2Port to S-Par</a></h5>
-    <h5><a href="/iccap-spar/1.2">2. Interpreting S-Par</a></h5>
-    <h5><a href="/iccap-spar/1.3">3. Device Modeling Based on S-Par</a></h5>
-    <h5><a href="/iccap-spar/1.4">4. How to Simulate S-Par</a></h5>
-    <h5><a href="/iccap-spar/1.5">5. Video - S-Parameters Modeling</a></h5>
-    <hr/>
-
     <h4>NWA Calibration</h4>
     <h5><a href="/iccap-nwa-cal/0">1. The Max Applicable RF Power</a></h5>
     <h5><a href="/iccap-nwa-cal/1">2. Performing the NWA Cal - 1</a></h5>
@@ -18,10 +10,23 @@
     <h5><a href="/iccap-nwa-cal/2">6. Video - NWA Cal Example</a></h5>
     <hr/>
 
+    <h4>S-Par De-embedding</h4>
+    <h5>Coming soon...</h5>
+    <hr/>
+
+    <h4>S-Par Modeling</h4>
+    <h5><a href="/iccap-spar/1.1">1. From Classical 2Port to S-Par</a></h5>
+    <h5><a href="/iccap-spar/1.2">2. Interpreting S-Par</a></h5>
+    <h5><a href="/iccap-spar/1.3">3. Device Modeling Based on S-Par</a></h5>
+    <h5><a href="/iccap-spar/1.4">4. How to Simulate S-Par</a></h5>
+    <h5><a href="/iccap-spar/1.5">5. Video - S-Parameters Modeling</a></h5>
+    <hr/>
+
     <h4>Spice Interpretation of S-Par</h4>
     <h5><a href="/iccap-spice-spar/1">1. Interpreting S-Par by SPICE Schematics</a></h5>
     <h5><a href="/iccap-spice-spar/2">2. Converting S-Par to PI or Tee Schematics</a></h5>
     <h5><a href="/iccap-spice-spar/3">3. Model from Impedance Plots</a></h5>
-
+    <h5><a href="/iccap-spice-spar/4">4. Handling Unphysical PI or Tee Impedances</a></h5>
+    <h5><a href="/iccap-spice-spar/5" target="_blank">5. YouTube Videos</a></h5>
     <br/><br/><br/><br/><br/>
 </div>
