--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,9 @@
 <table width="100%">
+     <tr>
+        <td width="15%">2020.02.07</td>
+        <td>ICCAP Noate: <a href="/iccapfaq/install_smartly" target="_blank">Install IC-CAP Smartly on Windows</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2020.02.01</td>
         <td>ICCAP Noate: <a href="/iccap-spice-spar/1" target="_blank">Interpreting S-Par By SPICEs Schematics</a>
@@ -12,6 +17,16 @@
     <tr>
         <td width="15%">2020.02.01</td>
         <td>ICCAP Noate: <a href="/iccap-spice-spar/3" target="_blank">Developing SPICE Model from Impedance Plots</a>
+        </td>
+    </tr>
+        <tr>
+        <td width="15%">2020.02.01</td>
+        <td>ICCAP Noate: <a href="/iccap-spice-spar/4" target="_blank">Handling Unphysical PI or Tee Impedances</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.02.01</td>
+        <td>ICCAP Noate: <a href="/iccap-spice-spar/5" target="_blank">YouTube Vidoes - Spice Interpretation of S-Par</a>
         </td>
     </tr>
 
