edit the wording on iccap agenda page for controlling the netlist parser

--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -345,7 +345,7 @@ IC-CAP App Notes
                 </tr>
                  <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:250px">
-                        <a href="/iccapfaq/netlist_parser" target="_blank">12. Controlling the IC-CAP Netlist Parser</a></td>
+                        <a href="/iccapfaq/netlist_parser" target="_blank">12. Control IC-CAP's Netlist Parser</a></td>
                      <td style="width:500px">Examples of using <em>#echo,  $mpar(), $dpar(), $var(), include</em></td>
                 </tr>
 
