add mbp top level page

--- a/templates/mbp/agenda.html
+++ b/templates/mbp/agenda.html
@@ -11,18 +11,41 @@ MBP App Notes
     <hr>
     <div overflow="scroll">
 
+
+        <h4><a href="/mbpst" target="_blank">MBP Script Tutorial</a></h4>
         <ul>
-            <h4><a href="/mbpst" target="_blank">MBP Script Tutorial</a></h4>
-            <hr/>
-            <h4><a href="/mbpfaq" target="_blank">MBP FAQs</a></h4>
-            <hr/>
-            <h4><a href="/video/MBP_recentering" target="_blank">Video Tutorials</a></h4>
-            <hr/>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/mbpst/chap1.1" target="_blank">1. MBP Script Basics</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/mbpst/chap2.1.1" target="_blank">2. IMV/DP/Flow/GUI</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/mbpst/chap3.1" target="_blank">3. More Examples</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/mbpst/chap4.1" target="_blank">4. Debugging</a></td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/mbpst/chap5.1" target="_blank">5. Appendix/APIs</a></td>
+                </tr>
 
 
-
-
+            </table>
         </ul>
+        <br/>
+
+        <h4><a href="/mbpfaq" target="_blank">MBP FAQs</a></h4>
+        <hr/>
+        <h4><a href="/video/MBP_recentering" target="_blank">Video Tutorials</a></h4>
+        <hr/>
+
 
         <br>
         <br>
