--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,27 @@
 <table width="100%">
-     <tr>
+    <tr>
+        <td width="15%">2020.02.27</td>
+        <td>MQA Note: <a href="/mqa/ppp/4" target="_blank">MQA Python PostProcess - Vth Calculation</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.02.26</td>
+        <td>MQA Note: <a href="/mqa/ppp/1" target="_blank">MQA Python PostProcess - Overview</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.02.26</td>
+        <td>MQA Note: <a href="/mqa/ppp/2" target="_blank">MQA Python PostProcess - GUI Operation</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.02.26</td>
+        <td>MQA Note: <a href="/mqa/ppp/3" target="_blank">MQA Python PostProcess - Command Line</a>
+        </td>
+    </tr>
+
+
+    <tr>
         <td width="15%">2020.02.21</td>
         <td>WPE Note: <a href="/wpefaq/e5250conn" target="_blank">E5250 Switch Connection</a>
         </td>
