add ICCAP - Copy-Paste Programming Examples

--- a/templates/iccap/toc.html
+++ b/templates/iccap/toc.html
@@ -31,8 +31,19 @@
     <hr/>
 
     <h4>Link to a Model Library</h4>
+    <h5><a href="/iccapfaq/netlist_parser" target="_blank">0. Control IC-CAP's Netlist Parser</a></h5>
     <h5><a href="/iccap-link-lib/1">1. Basics of Linking Libraries</a></h5>
     <h5><a href="/iccap-link-lib/2">2. Using Libraries</a></h5>
+
+
+    <hr/>
+    <h4>Copy-Paste Programming Examples</h4>
+    <h5><a href="/iccap-prog-example/0">0. Foreword</a></h5>
+    <h5><a href="/iccap-prog-example/1">1. Executing IC-CAP Automatically</a></h5>
+    <h5><a href="/iccap-prog-example/2">2. Accessing UI Fields and Data Values</a></h5>
+    <h5><a href="/iccap-prog-example/3">3. Managing IC-CAP Variables</a></h5>
+    <h5><a href="/iccap-prog-example/4">4. Finding And Identifying Objects</a></h5>
+
     <br/><br/><br/><br/><br/><br/>
 
 
