--- a/templates/iccap/agenda.html
+++ b/templates/iccap/agenda.html
@@ -126,6 +126,11 @@ IC-CAP App Notes
             <table>
                 <tr style="border-bottom: 1px solid gainsboro">
                     <td style="width:750px">
+                        <a href="/iccapfaq/netlist_parser" target="_blank">0. Control IC-CAP's Netlist Parser</a>
+                    </td>
+                </tr>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
                         <a href="/iccap-link-lib/1" target="_blank">1. Basics of Linking Libraries</a>
                     </td>
                 </tr>
@@ -134,6 +139,42 @@ IC-CAP App Notes
                         <a href="/iccap-link-lib/2" target="_blank">2. Using Libraries</a>
                     </td>
                 </tr>
+
+
+            </table>
+        </ul>
+
+        <br/>
+              <h4>Copy-Paste Programming Examples</h4>
+
+        <ul>
+            <table>
+                <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-prog-example/0" target="_blank">0. Foreword</a>
+                    </td>
+                </tr>
+                 <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-prog-example/1" target="_blank">1. Executing IC-CAP Automatically</a>
+                    </td>
+                </tr>
+                 <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-prog-example/2" target="_blank">2. Accessing UI Fields and Data Values</a>
+                    </td>
+                </tr>
+                 <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-prog-example/3" target="_blank">3. Managing IC-CAP Variables</a>
+                    </td>
+                </tr>
+                 <tr style="border-bottom: 1px solid gainsboro">
+                    <td style="width:750px">
+                        <a href="/iccap-prog-example/4" target="_blank">4. Finding And Identifying Objects</a>
+                    </td>
+                </tr>
+
 
 
             </table>
