--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,35 @@
 <table width="100%">
     <tr>
+        <td width="15%">2020.03.26</td>
+        <td>ICCAP Note: <a href="/iccap-prog-example/4" target="_blank">Programming Examples - Finding And Identifying
+            Objects</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2020.03.25</td>
+        <td>ICCAP Note: <a href="/iccap-prog-example/3" target="_blank">Programming Examples - Managing IC-CAP
+            Variables</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.03.25</td>
+        <td>ICCAP Note: <a href="/iccap-prog-example/2" target="_blank">Programming Examples - Accessing UI Fields and
+            Data Values</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.03.24</td>
+        <td>ICCAP Note: <a href="/iccap-prog-example/1" target="_blank">Programming Examples - Executing IC-CAP
+            Automatically</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2020.03.24</td>
+        <td>ICCAP Note: <a href="/iccap-prog-example/0" target="_blank">Programming Examples - Foreword</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2020.02.27</td>
         <td>MQA Note: <a href="/mqa/ppp/4" target="_blank">MQA Python PostProcess - Vth Calculation</a>
         </td>
