--- a/templates/mqa/python_pp/toc.html
+++ b/templates/mqa/python_pp/toc.html
@@ -7,6 +7,7 @@
     <h5><a href="/mqa/ppp/3">3. Command Line</a></h5>
     <h5><a href="/mqa/ppp/4">4. Vth Example</a></h5>
     <h5><a href="/mqa/ppp/5">5. FinFET Example</a></h5>
+    <h5><a href="/mqa/ppp/6">6. Multi-Processing</a></h5>
 
     <br/><br/><br/><br/><br/>
 
