--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2020.04.02</td>
+        <td>MQA Note: <a href="/mqa/ppp/6" target="_blank">MQA Python PostProcess - Multi-Processing</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2020.03.26</td>
         <td>ICCAP Note: <a href="/iccap-prog-example/4" target="_blank">Programming Examples - Finding And Identifying
             Objects</a>
